--- a/Python Pandas tutorial.ipynb
+++ b/Python Pandas tutorial.ipynb
@@ -59,7 +59,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Go to your winpython folder and run \"Jupyter Notebook.exe\". Click on this file, \"Python Pandas Tutorial\""
+    "Go to your winpython folder and run \"Jupyter Notebook.exe\". Your browser should open with a list of objects in your winpython notebooks folder.\n",
+    "\n",
+    "Click on the entry \"Python Pandas Tutorial\""
    ]
   },
   {
@@ -80,9 +82,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A few quick things about python and Jupyter Notebook before we get into Pandas\n",
+    "A few quick things about Python and Jupyter Notebook before we get into Pandas\n",
     "\n",
-    "python comments are denoted with #. When I switch to coding, these cells will be coding cells with commented lines between the code.\n",
+    "You can run the code in the cells below. Just be careful, if you try to rerun code with variables that were changed in another cell it wont run the same way, and could cause an error.\n",
+    "\n",
+    "Python comments are denoted with #. When I switch to coding, these cells will be coding cells with commented lines between the code.\n",
     "\n",
     "There are many different data objects in python. The most common are lists, dictionaries (dicts), and tuples. All three are useful at various times, but I will mainly be using lists here."
    ]
