Update Python Pandas tutorial.ipynb

--- a/Python Pandas tutorial.ipynb
+++ b/Python Pandas tutorial.ipynb
@@ -7,7 +7,7 @@
     "# Python Tutorial\n",
     "\n",
     "The purpose of this file is to be a tutorial on Python, Numpy, Pandas, Scikit-Learn, and Scipy. These libraries allow you to do any kind of analysis you can think of. \n",
-    "\n",
+    "\n\n",
     "There is considerable documentation on each of the libraries' websites, just Google the library name and the question/error you are looking for."
    ]
   },
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Jupiter Notebook is a simple progtramming interface that can be installed on your work computer.\n",
+    "Jupiter Notebook is a simple programming interface that can be installed on your work computer.\n",
     "\n",
     "Go to this link:\n",
     "https://sourceforge.net/projects/winpython/files/latest/download?source=files"
