Update Python Pandas tutorial.ipynb

--- a/Python Pandas tutorial.ipynb
+++ b/Python Pandas tutorial.ipynb
@@ -1233,7 +1233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here are some basic summary statistics about the data. It gives you sample size, mean, standard deviation, and the average for each quadrile. We need to be careful with IQS question data. The respondents can only either complain or not complain about an issue, so IQS questions have a Binomial distribution. At large sample sizes we can approximate a Binomial distribution as a Normal distribution, but when we start slicing the data into smaller groups we will need to be careful."
+    "Here are some basic summary statistics about the data. It gives you sample size, mean, standard deviation, and the average for each quadrile. We need to be careful with IQS question data. The respondents can only either complain or not complain about an issue, so IQS questions have a Binomial distribution. This means statistics based on the Normal Distribution assumption will not hold."
    ]
   },
   {
