Update Python Pandas tutorial.ipynb

--- a/Python Pandas tutorial.ipynb
+++ b/Python Pandas tutorial.ipynb
@@ -1412,7 +1412,9 @@
    "source": [
     "This data is only 0 or 1, indicating the respondent either complained or didn't complain about the problem. The only relavent stats are sample sizeand mean. Standard deviation may be relavant if the sample size is large enough to meet the normal distribution approximation criteria for a binomial distribution.\n",
     "\n",
-    "The most important statistic about IQS complaints is the Problems Per Hundred, or PPH, rate. This can be obtained by calculating the mean of a variable and multiplying by 100. We could isolate the mean from the describe() dataframe or get the mean directly from the data."
+    "The most important statistic about IQS complaints is the Problems Per Hundred, or PPH, rate. This can be obtained by calculating the mean of a variable and multiplying by 100.
+    "\n",
+    "Lets calculate only the mean directly from the data."
    ]
   },
   {
