--- a/Python Pandas tutorial.ipynb
+++ b/Python Pandas tutorial.ipynb
@@ -7,7 +7,7 @@
     "# Python Tutorial\n",
     "\n",
     "The purpose of this file is to be a tutorial on Python, Numpy, Pandas, Scikit-Learn, and Scipy. These libraries allow you to do any kind of analysis you can think of. \n",
-    "\n\n",
+    "\n",
     "There is considerable documentation on each of the libraries' websites, just Google the library name and the question/error you are looking for."
    ]
   },
@@ -25,7 +25,7 @@
     "Jupiter Notebook is a simple programming interface that can be installed on your work computer.\n",
     "\n",
     "Go to this link:\n",
-    "https://sourceforge.net/projects/winpython/files/WinPython_3.6/3.6.3.0/WinPython-64bit-3.6.3.0Qt5.exe/download"
+    "https://sourceforge.net/projects/winpython/files/latest/download?source=files"
    ]
   },
   {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -118,10 +118,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -129,7 +127,7 @@
        "['Hi', 'There', 13, 3.1415926535]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,10 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "#You can also define functions or classes that you can use anywhere else in the notebook\n",
@@ -157,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -207,9 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Importing a csv file is pretty simple in pandas\n",
@@ -220,9 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -426,9 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -715,9 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -931,9 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1233,15 +1217,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here are some basic summary statistics about the data. It gives you sample size, mean, standard deviation, and the average for each quadrile. We need to be careful with IQS question data. The respondents can only either complain or not complain about an issue, so IQS questions have a Binomial distribution. This means statistics based on the Normal Distribution assumption will not hold."
+    "Here are some basic summary statistics about the data. It gives you sample size, mean, standard deviation, and the average for each quadrile. We need to be careful with IQS question data. The respondents can only either complain or not complain about an issue, so IQS questions have a Binomial distribution. At large sample sizes we can approximate a Binomial distribution as a Normal distribution. When we start slicing the data into smaller groups we will need to use Binomial statistics."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1322,9 +1304,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1412,17 +1392,15 @@
    "source": [
     "This data is only 0 or 1, indicating the respondent either complained or didn't complain about the problem. The only relavent stats are sample sizeand mean. Standard deviation may be relavant if the sample size is large enough to meet the normal distribution approximation criteria for a binomial distribution.\n",
     "\n",
-    "The most important statistic about IQS complaints is the Problems Per Hundred, or PPH, rate. This can be obtained by calculating the mean of a variable and multiplying by 100.
+    "The most important statistic about IQS complaints is the Problems Per Hundred, or PPH, rate. This can be obtained by multiplying the mean of the complaint column and multiplying by 100. \n",
     "\n",
-    "Lets calculate only the mean directly from the data."
+    "Let's get the mean directly from the data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1445,9 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1489,9 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1666,9 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1867,9 +1839,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2070,9 +2040,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2271,9 +2239,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2465,9 +2431,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2492,9 +2456,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2673,9 +2635,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2874,9 +2834,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2938,9 +2896,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3141,9 +3097,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3312,9 +3266,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Lets drop the rows we dropped before, so we can combine the p-hat data to our modelNoisePPHSorted dataframe\n",
@@ -3326,9 +3278,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Lets create a new dataframe that copies the modelNoisePPHSorted dataframe and do the CI calculations there\n",
@@ -3338,9 +3288,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3605,9 +3553,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3913,9 +3859,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4285,9 +4229,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4532,9 +4474,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4594,9 +4534,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -6368,9 +6306,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -8157,9 +8093,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Lets create lists of complaint and non-complaint variables\n",
@@ -8183,9 +8117,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#For each non-complaint variable, we are going to loop through each unique value of that variable\n",
@@ -8207,9 +8139,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -9994,9 +9924,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#define a function for significance, assuming it takes two rows from the meanDF dataframe\n",
@@ -10031,9 +9959,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#create an empty list to contain the subgroups and significances\n",
@@ -10051,9 +9977,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -10424,7 +10348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
